erDiagram
  USERS {
    string user_id PK
    string name
    string email
    string password_hash
    string role
    string phone
    datetime created_at
  }

  VEHICLES {
    string vehicle_id PK
    string plate_number
    string model
    string color
    string owner_user_id FK
    datetime registration_date
    string status
  }

  VIOLATIONS {
    string violation_id PK
    string vehicle_id FK
    string officer_user_id FK
    string signal_id FK
    string violation_type
    string location
    datetime violation_time
    decimal fine_amount
    string status
  }

  SIGNALS {
    string signal_id PK
    string location
    string current_state
    datetime last_updated
  }

  PAYMENTS {
    string payment_id PK
    string violation_id FK
    string payer_user_id FK
    decimal amount
    string method
    string status
    datetime paid_at
  }

  NOTIFICATIONS {
    string notification_id PK
    string user_id FK
    string violation_id FK
    string message
    string channel
    datetime sent_at
  }

  USERS ||--o{ VEHICLES : owns
  USERS ||--o{ VIOLATIONS : records_as_officer
  USERS ||--o{ PAYMENTS : makes
  USERS ||--o{ NOTIFICATIONS : receives

  VEHICLES ||--o{ VIOLATIONS : receives
  SIGNALS ||--o{ VIOLATIONS : related_to
  VIOLATIONS ||--o| PAYMENTS : paid_by
  VIOLATIONS ||--o{ NOTIFICATIONS : triggers
